--- a/views/quanlyloaisanpham.ejs
+++ b/views/quanlyloaisanpham.ejs
@@ -1,164 +1,185 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Admin site</title>
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Admin site</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--SOCKETIO for Sign up-->
+    <script src="socket.io/socket.io.js"></script>
+    <script> var socket = io('http://localhost:3000'); </script>
+    <script>
+        function checkCategory() {
+            var name = checkBusinessName(document.getElementById('categoryName').value);
+            if (name) {
+                socket.emit("Client_sent_data_category", document.getElementById('categoryName').value);
+                socket.on("Server_sent_data_category", function (data) {
+                    if (data) {
+                        document.getElementById("categoryForm").submit();
+                    } else {
+                        document.getElementById("error_businessName").innerHTML = "Tên loại đã tồn tại";
+                    }
+                });
+            }
+        }
 
-<!-- Favicon -->
-<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+    </script>
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+        rel="stylesheet">
 
-<!-- CSS -->
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- Icon Font CSS-->
-<link rel="stylesheet" href=css/material-design-iconic-font.min.css">
-<!-- Plugins Import CSS -->
-<link rel="stylesheet" href="css/import.css">
-<!-- Style CSS -->
-<link rel="stylesheet" href="style.css">
-<!-- Responsive CSS -->
-<link rel="stylesheet" href="css/responsive.css">
-<link href="css/color/color-1.css" rel="stylesheet">
-<link rel="stylesheet" href="css/addNews.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+    <!-- CSS -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Icon Font CSS-->
+    <link rel="stylesheet" href="css/material-design-iconic-font.min.css"> <!-- Plugins Import CSS -->
+    <link rel="stylesheet" href="css/import.css">
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
+    <link href="css/color/color-1.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/addNews.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 
-<!-- Modernizer JS -->
-<script src="js/jquery.min.js"></script>
+    <!-- Delete CSS -->
+    <link rel="stylesheet" href="css/styleDel.css">
+    <!-- Modernizer JS -->
+    <script src="js/jquery.min.js"></script>
 </head>
+
 <body>
-<!-- Pre Loader -->
-<div class="preloader">
-    <div class="loading-center">
-        <div class="loading-center-absolute">
-            <div class="object object_one">
-            </div>
-            <div class="object object_two">
-            </div>
-            <div class="object object_three">
+    <!-- Pre Loader -->
+    <div class="preloader">
+        <div class="loading-center">
+            <div class="loading-center-absolute">
+                <div class="object object_one">
+                </div>
+                <div class="object object_two">
+                </div>
+                <div class="object object_three">
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Body main wrapper start -->
-<div class="wrapper bg-white fix">
-    
-    <!-- Header 4 -->
-    <% include element/header %>
-    <!-- Cart Area -->
-    <div class="cart-area pb-90 pt-90 mt-100">
-        <div class="container">
-            <div class="row">
-                <div class="procced-checkout col-md-12 col-xs-12">
-                    <button class="btn btn-open checkout-link">
-                    <span>Thêm loại sản phẩm</span></button>
-                </div>
-                <section class="modal">
-                    <div class="wrapper">
-                        <div class="container">
-                            <span class="icon-close"></span>
-                            <div class="right">
-                                <div class="form">
-                                    <h2 class="title">Thêm loại sản phẩm</h2>
-                                    <form>
-                                        <div class="input-wrapper">
-                                            <label for="">Nhập tên loại:</label>
-                                            <input id="name" type="text" placeholder="Name">
-                                        </div>
-                                    </form>
-                                    <button class="btn"><span>Xác nhận</span></button>
+    <!-- Body main wrapper start -->
+    <div class="wrapper bg-white fix">
+
+        <!-- Header 4 -->
+        <% include element/header %>
+        <!-- Cart Area -->
+        <div class="cart-area pb-90 pt-90 mt-100">
+            <div class="container">
+                <div class="row">
+                    <div class="procced-checkout col-md-12 col-xs-12">
+                        <button class="btn btn-open checkout-link">
+                            <span>Thêm loại sản phẩm</span></button>
+                    </div>
+                    <section class="modal">
+                        <div class="wrapper">
+                            <div class="container">
+                                <span class="icon-close"></span>
+                                <div class="right">
+                                    <div class="form">
+                                        <h2 class="title">Thêm loại sản phẩm</h2>
+                                        <form action="createCategory" method="POST" id="categoryForm">
+                                            <div class="input-wrapper">
+                                                <label for="">Nhập tên loại:</label>
+                                                <input id="categoryName" type="text" placeholder="Name"
+                                                    onblur="checkBusinessName(this.value)" name="categoryName">
+                                            </div>
+                                            <label id="error_businessName"
+                                                style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;"></label>
+                                                <button class="card__btn" type="button" onclick="checkCategory();"><span>Thêm</span></button>
+                                        </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </section>
-            </div>
-            <div class="row" style="margin-top: 20px;">
-                <div class="col-xs-12">
-                    <div class="cart-table table-responsive mb-50">
-                        <table class="table">
-                            <thead class="thead-dark">
-                                <tr>
-                                    <th scope="col" style="text-align: left;"> #</th>
-                                    <th scope="col" style="text-align: left;">Mã Loại</th>
-                                    <th scope="col" style="text-align: left;">tên loại</th>
-                                    <th scope="col" style="text-align: left;">Edit</th>
-                                    <th scope="col" style="text-align: left;">Remove</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>KD12</td>
-                                    <td>Nguyễn Văn A</td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-close"></i></button></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>KD12</td>
-                                    <td>Nguyễn Văn A</td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-close"></i></button></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">3</th>
-                                    <td>KD12</td>
-                                    <td>Nguyễn Văn A</td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-close"></i></button></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">4</th>
-                                    <td>KD12</td>
-                                    <td>Nguyễn Văn A</td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-close"></i></button></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">5</th>
-                                    <td>KD12</td>
-                                    <td>Nguyễn Văn A</td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-close"></i></button></td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    </section>
+                </div>
+                <div class="row" style="margin-top: 20px;">
+                    <div class="col-xs-12">
+                        <div class="cart-table table-responsive mb-50">
+                            <table class="table">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th scope="col" style="text-align: left;"> #</th>
+                                        <th scope="col" style="text-align: left;">Mã Loại</th>
+                                        <th scope="col" style="text-align: left;">tên loại</th>
+                                        <th scope="col" style="text-align: left;">Edit</th>
+                                        <th scope="col" style="text-align: left;">Remove</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <% var i = 1; %>
+                                    <% if(_uG.length != 0){ %>
+                                    <% _uG.forEach((item) => { %>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td><%= item.categoryID %></td>
+                                        <td><%= item.categoryName %></td>
+                                        <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
+                                        <td><!-- partial:index.partial.html -->
+                                            <a><button class="cd-popup-trigger cart-pro-remove"><i
+                                                        class="zmdi zmdi-close"></i></button></a>
+                                            <div class="cd-popup" role="alert">
+                                                <div class="cd-popup-container">
+                                                    <p>Are you sure you want to delete this element?</p>
+                                                    <ul class="cd-buttons">
+                                                        <li><a
+                                                                href="/deleteCategory?categoryID=<%= item.categoryID %>&categoryName=<%= item.categoryName %>">Yes</a>
+                                                        </li>
+                                                        <li><a class="btn cd-popup-close1"
+                                                                style="padding-top: 0px;">No</a></li>
+                                                    </ul>
+                                                    <a class="cd-popup-close img-replace"></a>
+                                                </div> <!-- cd-popup-container -->
+                                            </div> <!-- cd-popup --></td>
+                                    </tr>
+                                    <% i++ %>
+                                    <% });%>
+                                    <% };%>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!--Footer-->
+        <% include element/footer %>
     </div>
-    <!--Footer-->
-    <% include element/footer %>
-</div>
-<!-- Body main wrapper end -->
+    <!-- Body main wrapper end -->
 
-<!-- JS -->
+    <!-- JS -->
 
-<!-- jQuery JS -->
-<script src="js/vendor/jquery.min.js"></script>
-<!-- Bootstrap JS -->
-<script src="js/bootstrap.min.js"></script>
-<!-- Plugins JS -->
-<script src="js/plugins.js"></script>
-<!-- Particles Active JS -->
-<script src="js/app.js"></script>
-<!-- Main JS -->
-<script src="js/main.js"></script>
-<script src="js/addNews.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $(".menu_loaisanpham").addClass("active");
-    });
-</script>
+    <!-- jQuery JS -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/checkForm.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Plugins JS -->
+    <script src="js/plugins.js"></script>
+    <!-- Particles Active JS -->
+    <script src="js/app.js"></script>
+    <!-- Main JS -->
+    <script src="js/main.js"></script>
+    <script src="js/addNews.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".menu_loaisanpham").addClass("active");
+        });
+    </script>
+    <script src="js/scriptDel.js"></script>
 </body>
+
 </html>
