--- a/views/quanlyloaisanpham.ejs
+++ b/views/quanlyloaisanpham.ejs
@@ -110,11 +110,11 @@
                             <table class="table">
                                 <thead class="thead-dark">
                                     <tr>
-                                        <th scope="col" style="text-align: left;"> #</th>
+                                        <th scope="col" style="text-align: left; width: 80px;"> #</th>
                                         <th scope="col" style="text-align: left;">Mã Loại</th>
                                         <th scope="col" style="text-align: left;">tên loại</th>
-                                        <th scope="col" style="text-align: left;">Edit</th>
-                                        <th scope="col" style="text-align: left;">Remove</th>
+                                        <th scope="col" style="text-align: left; width: 80px;">Edit</th>
+                                        <th scope="col" style="text-align: left; width: 80px;">Remove</th>
                                     </tr>
                                 </thead>
                                 <tbody>
